添加文件发送相关类

--- a/doc/文件传输协议.md
+++ b/doc/文件传输协议.md
@@ -7,7 +7,7 @@
 | 会话id | string | 32 | 一个会话id代表一个文件任务，32位长度的uuid |
 | 用户id | string | 32 | 发送该文件的用户id，32位长度的uuid     |
 | 时间戳  | int64  | 8  | 消息发送的时间戳                  |
-| 载荷长度 | int32  | 4  | 载荷的总字节数                   |
+| 载荷长度 | int16  | 2  | 载荷的总字节数                   |
 | 载荷   | bytes  |    | 实际承载的数据，长度为消息长度标识的        |
 
 ## 消息类型
@@ -27,16 +27,17 @@
 
 ### FileTransferAcknowledgeResponse
 
-| 字段名称  | 类型    | 长度 | 描述          |
-|-------|-------|----|-------------|
-| 接受时间戳 | int64 | 8  | 对方接受该文件的时间戳 |
+| 字段名称  | 类型      | 长度 | 描述       |
+|-------|---------|----|----------|
+| 确认时间戳 | int64   | 8  | 对方确认时间戳  |
+| 是否接收  | boolean | 1  | 对方是否接收文件 |
 
 ### FileChunkFetchRequest
 
 | 字段名称  | 类型    | 长度 | 描述                |
 |-------|-------|----|-------------------|
 | 文件块编号 | int32 | 4  | 本次要取的文件块编号，从0开始计数 |
-| 文件块大小 | int32 | 4  | 本次要取的文件块大小        |
+| 文件块大小 | int16 | 2  | 本次要取的文件块大小        |
 
 ### FileChunkFetchResponse
 
@@ -50,5 +51,5 @@
 | 字段名称    | 类型    | 长度 | 描述                     |
 |---------|-------|----|------------------------|
 | 文件块编号   | int32 | 4  | 本次要取的文件块编号，从0开始计数      |
-| 文件块大小   | int32 | 4  | 本次要取的文件块大小             |
+| 文件块大小   | int16 | 2  | 本次要取的文件块大小             |
 | 已收取文件大小 | int64 | 8  | 已取的总文件大小，由之前收取的所有文件块相加 |
